--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "dev": "ts-node-dev --respawn src/server.ts",
-     "build": "tsc",
-     "start": "node dist/server.js"
+    "start:backend": "ts-node src/Server.ts", 
+    "dev:frontend": "vite",
+    "dev": "npm run start:backend & npm run dev:frontend"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0"
   }
 }
